add_subdirectory(functions)
add_subdirectory(distributions)
add_subdirectory(matrix)
add_subdirectory(samplers)
add_library(bugs SHARED bugs.cc $<TARGET_OBJECTS:jrmath> $<TARGET_OBJECTS:bugsFunctions> $<TARGET_OBJECTS:bugsDistributions> $<TARGET_OBJECTS:bugsMatrix> $<TARGET_OBJECTS:bugsSamplers>)
target_include_directories(bugs PRIVATE .)
target_link_libraries(bugs PRIVATE ${MKL_LP_LIBRARY} ${MKL_INTELTHREAD_LIBRARY} ${MKL_CORE_LIBRARY} ${MKL_LAPACK_LIBRARY} ${MKL_IOMP5_LIBRARY} jags)
export(TARGETS bugs FILE "${CMAKE_BINARY_DIR}/bugsConfig.cmake")