add_subdirectory(functions)
add_subdirectory(distributions)
add_subdirectory(matrix)
add_subdirectory(samplers)
add_library(bugs SHARED bugs.cc $<TARGET_OBJECTS:jrmath> $<TARGET_OBJECTS:bugsFunctions> $<TARGET_OBJECTS:bugsDistributions> $<TARGET_OBJECTS:bugsMatrix> $<TARGET_OBJECTS:bugsSamplers>)
target_include_directories(bugs PRIVATE .)
target_link_libraries(bugs PRIVATE ${BLAS_LIBRARIES} jags)
export(TARGETS bugs FILE "${CMAKE_BINARY_DIR}/bugsConfig.cmake")
if(NOT WIN32)
	target_compile_options(bugs PRIVATE -fPIC)
	set_target_properties(bugs PROPERTIES PREFIX "")
endif()
install(TARGETS bugs DESTINATION lib/JAGS/modules-5)